Added comments and functionality

--- a/3D_Globe_With_Country_Hover/index.html
+++ b/3D_Globe_With_Country_Hover/index.html
@@ -1,10 +1,11 @@
+
+<!-- 3D Globe With Country Hover --> 
+
 <!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
   <title>3D Earth Globe showing Information about Countries</title>
-  <h2>3D Earth Globe</h2>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,5 +21,4 @@
 <script  src="js/index.js"></script>
 
 </body>
-<h7>By- Vrushali Nadre and Dixit Khosla</h7>
 </html>
