--- a/3D_Globe_With_Country_Hover/index.html
+++ b/3D_Globe_With_Country_Hover/index.html
@@ -8,17 +8,29 @@
   <title>3D Earth Globe showing Information about Countries</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body><style>
+h1{text-align: center;
+  position: absolute;
+  top:-4%;
+    width: 100%;
+  text-shadow:  0 1px 0 hsl(174,5%,80%),0 2px 0 hsl(174,5%,75%),0 3px 0 hsl(174,5%,70%),0 4px 0 hsl(174,5%,66%),0 5px 0 hsl(174,5%,64%),0 6px 0 hsl(174,5%,62%),0 7px 0 hsl(174,5%,61%),
+	                 0 8px 0 hsl(174,5%,60%),0 0 5px rgba(0,0,0,.05),0 1px 3px rgba(0,0,0,.2),0 3px 5px rgba(0,0,0,.2),
+                 0 5px 10px rgba(0,0,0,.2),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.3);   
+                          
+}
+</style>
+    <h1> 3D Globe With Country Hover</h1>
+
   <h2 id="current"></h2>
-  <h2 id="countryInfo"></h2>
-  <h2 id="area"></h2>
-  <h2 id="population"></h2>
+  <h3 id="countryInfo"></h3>
+  <h3 id="area"></h3>
+  <h3 id="population"></h3>
   <canvas id="globe"></canvas>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js'></script>
 <script src='https://d3js.org/d3-geo.v1.min.js'></script>
 <script src='https://d3js.org/topojson.v2.min.js'></script>
 <script src='https://bl.ocks.org/mbostock/raw/7ea1dde508cec6d2d95306f92642bc42/6aac691494f752142a67cc43c51a0fd09896dbd4/versor.js'></script>
-<script  src="js/index.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
