--- a/3D_Globe_With_Country_Hover/index.html
+++ b/3D_Globe_With_Country_Hover/index.html
@@ -8,12 +8,14 @@
     <title>3D Earth Globe showing Information about Countries</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-      <h1 class="globe-title"> 3D Globe With Country Hover</h1>
-      <h2 id="currentCountryName"></h2>
-      <h3 id="countryInfo"></h3>
-      <h3 id="area"></h3>
-      <h3 id="population"></h3>
+  <body class="star-background"> 
+      <h1 class="common-text-shadow globe-title"> 3D Globe With Country Hover</h1>
+      <div class="common-text-style common-text-shadow">
+        <h2 class="country-name-text" id="currentCountryName"></h2>
+        <h3 class="info-text" id="countryInfo"></h3>
+        <h3 class="info-text" id="area"></h3>
+        <h3 class="info-text" id="population"></h3>
+      </div>
       <canvas id="globe"></canvas>
       <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js'></script>
       <script src='https://d3js.org/d3-geo.v1.min.js'></script>
