--- a/3D_Globe_With_Country_Hover/index.html
+++ b/3D_Globe_With_Country_Hover/index.html
@@ -21,6 +21,7 @@
       <script src='https://d3js.org/d3-geo.v1.min.js'></script>
       <script src='https://d3js.org/topojson.v2.min.js'></script>
       <script src='https://bl.ocks.org/mbostock/raw/7ea1dde508cec6d2d95306f92642bc42/6aac691494f752142a67cc43c51a0fd09896dbd4/versor.js'></script>
+      <script src="js/countryMap.js"></script>
       <script src="js/index.js"></script>
   </body>
 </html>
